--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
 addict
 future
 lmdb
-matplotlib
-mmcv>=0.6
+pandas<1.4
+pillow==8.4.0
+torchsummaryX
+lpips
+matplotlib<3.6
+torch==1.3.0
+torchvision==0.4.1
+mmcv==0.6.2
 numpy
 opencv-python
 pyyaml
 scikit-image
-scipy
+scipy<1.8.0
 tb-nightly
-torch>=1.3
-torchvision
 yapf
