--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,19 @@
 addict
 future
 lmdb
-pandas<1.4
-pillow==8.4.0
-torchsummaryX
-lpips
-matplotlib<3.6
-torch==1.7.0
-torchvision==0.8.0
-mmcv==0.6.2
+matplotlib
 numpy
 opencv-python
 pyyaml
 scikit-image
-scipy<1.8.0
+scipy
 tb-nightly
 yapf
+tqdm
+lpips
+rawpy
+imageio
+torchinfo
+torch
+torchvision
+mmcv-full==1.7.1
